feat(Settings): Add system for versioning and upgrading Settings
Similar to how History handles SCHEMA_VERSION. Run separately on global and
personal settings, since some state in global, and personal settings can’t be
done globally since they require the passkey.

Restrict a user from downgrading past the saved settings version, due to
possible compatibility breaks or old qTox versions re-introducing corrupt state
that was already healed.

Pass in new profile state for personal settings rather than relying on settings
file presence because personal settings can be stored in either the personal
settings file or global settings file. This was introduced in
aea9eea8a4e2f95a7175954183959c1070bcc315 when personal settings were first
moved to their own file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -363,6 +363,10 @@ set(${PROJECT_NAME}_SOURCES
   src/persistence/settings.h
   src/persistence/settingsserializer.cpp
   src/persistence/settingsserializer.h
+  src/persistence/globalsettingsupgrader.cpp
+  src/persistence/globalsettingsupgrader.h
+  src/persistence/personalsettingsupgrader.cpp
+  src/persistence/personalsettingsupgrader.h
   src/persistence/smileypack.cpp
   src/persistence/smileypack.h
   src/persistence/toxsave.cpp
