feat(Settings): Add system for versioning and upgrading Settings
Similar to how History handles SCHEMA_VERSION. Run on global settings globally
since some upgrades may be global, even if some may be local. Restrict a user
from downgrading past the saved settings version, due to possible compatibility
breaks or old qTox versions re-introducing corrupt state that was already
healed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -363,6 +363,8 @@ set(${PROJECT_NAME}_SOURCES
   src/persistence/settings.h
   src/persistence/settingsserializer.cpp
   src/persistence/settingsserializer.h
+  src/persistence/settingsupgrader.cpp
+  src/persistence/settingsupgrader.h
   src/persistence/smileypack.cpp
   src/persistence/smileypack.h
   src/persistence/toxsave.cpp
