chore(build): Enable lots of compile-time warnings
Taken directly from https://github.com/evilcorpltd/n_e_s/tree/9777aa619db619c1488fc016b0912a0efb2cc303/warnings

* Remove Wuseless-cast, because Qt's MOC-generated code hits it.
* Remove Wduplicated-branches, Wduplicated-branches, Wformat-truncation
because they aren't supported on our oldest CI job.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -646,6 +646,7 @@ link_libraries(coverage_config)
 add_subdirectory(util)
 add_subdirectory(audio)
 add_subdirectory(translations)
+add_subdirectory(cmake/warnings)
 
 add_library(${PROJECT_NAME}_static
   STATIC
@@ -659,6 +660,7 @@ target_link_libraries(${PROJECT_NAME}_static
 target_link_libraries(${PROJECT_NAME}_static util_library)
 target_link_libraries(${PROJECT_NAME}_static audio_library)
 target_link_libraries(${PROJECT_NAME}_static translations_library)
+target_link_libraries(${PROJECT_NAME}_static qtox::warnings)
 
 add_executable(${PROJECT_NAME}
   WIN32
