chore(build): Enable all warnings on qTox libraries as well
warnings interface was only being linked to qtox_static, so were not being
applied to e.g. util. Link it to each library as well as qtox_static so that
they all inherit all the warnings.

--- a/audio/CMakeLists.txt
+++ b/audio/CMakeLists.txt
@@ -38,3 +38,4 @@ target_include_directories(audio_library PUBLIC include/)
 target_link_libraries(audio_library util_library)
 target_link_libraries(audio_library Qt5::Core)
 target_link_libraries(audio_library ${OPENAL_LIBRARIES})
+target_link_libraries(audio_library qtox::warnings)
