--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -27,3 +27,4 @@ add_library(util_library STATIC
 # We need this directory, and users of our library will need it too
 target_include_directories(util_library PUBLIC include/)
 target_link_libraries(util_library PRIVATE Qt5::Core)
+target_link_libraries(util_library PRIVATE qtox::warnings)
