refactor(main): Move main global state into new AppManager class
main() couldn't hold its own state since cleanup() needed access to it.
Having the state in a class allows QApplication::aboutToQuit to call
into a member function with access to the state.

Data used in logging still needs to be global due to
qInstallMessageHandler not accepting a void* to get back to this.

Set QGuiApplication attributes before constructing Qapplication as required,
by using comma operator to call an initialization function before construction
all members in the member initializer list.

Keep logic largely unchanged, but with a defined destruction order.

Destruction is still abnormal due to QApplication::aboutToQuit forcing
us to do partial cleanup before QApplication returns, since some OSes
will kill qTox before the QApplication returns.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,6 +171,16 @@ if(NOT "${SMILEYS}" STREQUAL "DISABLED")
 endif()
 
 set(${PROJECT_NAME}_SOURCES
+  src/appmanager.cpp
+  src/appmanager.h
+  src/friendlist.cpp
+  src/friendlist.h
+  src/grouplist.cpp
+  src/grouplist.h
+  src/ipc.cpp
+  src/ipc.h
+  src/nexus.cpp
+  src/nexus.h
   src/chatlog/chatlinecontent.cpp
   src/chatlog/chatlinecontent.h
   src/chatlog/chatlinecontentproxy.cpp
@@ -250,12 +260,6 @@ set(${PROJECT_NAME}_SOURCES
   src/core/chatid.h
   src/core/toxstring.cpp
   src/core/toxstring.h
-  src/friendlist.cpp
-  src/friendlist.h
-  src/grouplist.cpp
-  src/grouplist.h
-  src/ipc.cpp
-  src/ipc.h
   src/model/about/aboutfriend.cpp
   src/model/about/aboutfriend.h
   src/model/about/iaboutfriend.cpp
@@ -315,8 +319,6 @@ set(${PROJECT_NAME}_SOURCES
   src/net/avatarbroadcaster.h
   src/net/toxuri.cpp
   src/net/toxuri.h
-  src/nexus.cpp
-  src/nexus.h
   src/persistence/db/rawdatabase.cpp
   src/persistence/db/rawdatabase.h
   src/persistence/db/upgrades/dbupgrader.cpp
