refactor(CI): Rename Windows cross compile builds to match cmake types
Debug and Release with capital letters are consistent with all our other CI
script build type names as well as cmake build types.

--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -353,7 +353,7 @@ jobs:
         contents: write
     strategy:
       matrix:
-        build_type: [debug, release]
+        build_type: [Debug, Release]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/load-docker-image
@@ -433,7 +433,7 @@ jobs:
       contents: write
     strategy:
       matrix:
-        build_type: [debug, release]
+        build_type: [Debug, Release]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/load-docker-image
