--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,8 @@ if (UNIX AND NOT APPLE)
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-z,relro")
 endif()
 
+add_definitions(-DQT_NO_CAST_FROM_BYTEARRAY)
+
 include(CheckAtomic)
 
 # Use ccache when available to speed up builds.
