feat(CI): Disallow implicit casting of QString to char*
QString holds UTF8 data which may not be a valid ASCII C string. Require
an explicit conversion if wanted.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,7 @@ if (UNIX AND NOT APPLE)
 endif()
 
 add_definitions(-DQT_NO_CAST_FROM_BYTEARRAY)
+add_definitions(-DQT_NO_CAST_TO_ASCII)
 
 include(CheckAtomic)
 
