--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -512,6 +512,8 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v3
+      - name: Remove keg-only git install
+        run: brew remove git@2.35.1
       - name: Homebrew dependencies to build dependencies
         run: brew upgrade && brew bundle --file ./osx/Brewfile-DepBuildDeps
       - name: Build dependencies
@@ -556,6 +558,8 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Remove keg-only git install
+        run: brew remove git@2.35.1
       - name: Homebrew
         run: brew upgrade && brew bundle --file ./osx/Brewfile
       - name: Install toxcore and toxext
