--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -515,7 +515,7 @@ jobs:
       - name: Remove keg-only git install
         run: brew remove git@2.35.1
       - name: Homebrew dependencies to build dependencies
-        run: brew upgrade && brew bundle --file ./osx/Brewfile-DepBuildDeps
+        run: brew update && brew upgrade && brew bundle --file ./osx/Brewfile-DepBuildDeps
       - name: Build dependencies
         run: ./.ci-scripts/build-osx-deps.sh
       - name: Build qTox
@@ -561,7 +561,7 @@ jobs:
       - name: Remove keg-only git install
         run: brew remove git@2.35.1
       - name: Homebrew
-        run: brew upgrade && brew bundle --file ./osx/Brewfile
+        run: brew update && brew upgrade && brew bundle --file ./osx/Brewfile
       - name: Install toxcore and toxext
         run: buildscripts/build_toxcore_linux.sh
       - name: Build qTox
